# pcbnets

./: README.md  make_mips  make_tiles  pyproject.toml
examples/: make_example.py  run
pcbnets/: __init__.py  audit.py  cli.py  gerber.py  masks.py  mips.py  nets.py  prepare.py  render.py  server.py  tiles.py
pcbnets/static/: README_webgl.md  index.html  parser.js  test_parser.js
tests/: test_audit.py  test_cli_resolution.py  test_gerber.py  test_pipeline.py
