[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pcbnets"
version = "0.1.0"
description = "Interactive PCB net explorer from rasterised Gerber layers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mark" }]
keywords = ["pcb", "gerber", "eda", "kicad", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pillow>=9.0",
    "flask>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
pcbnets = "pcbnets.cli:main"

[project.urls]
Homepage = "https://github.com/scrameta/pcbnets"
Source   = "https://github.com/scrameta/pcbnets"

[tool.setuptools]
packages = ["pcbnets"]

[tool.setuptools.package-data]
pcbnets = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
